--- a/.github/workflows/windows-2022.yml
+++ b/.github/workflows/windows-2022.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Connect Ngrok.
         run: |
           ./ngrok/ngrok.exe authtoken $Env:NGROK_AUTH
-          echo ${{ secrets.TAKEN }}
+          echo ${{ secrets.NGROK_AUTH }}
           echo $Env:NGROK_AUTH
         env:
           NGROK_AUTH: ${{ secrets.TAKEN }}
