--- a/.github/workflows/windows-2022.yml
+++ b/.github/workflows/windows-2022.yml
@@ -1,7 +1,6 @@
 name: WINDOWS 2022 RDP
 on:
   workflow_dispatch
-  
 jobs:
   build:
     runs-on: windows-2022
@@ -18,21 +17,23 @@ jobs:
         run: Expand-Archive ngrok.zip
         
       - name: Connect Ngrok.
+        env:
+          NGROK_AUTH: ${{ secrets.NGROK_AUTH_TOKEN }}
         run: |
           ./ngrok/ngrok.exe authtoken $Env:NGROK_AUTH
-          echo ${{ secrets.NGROK_AUTH }}
-          echo $Env:NGROK_AUTH
-        env:
-          NGROK_AUTH: ${{ secrets.TAKEN }}
-      - name: Windows10 RDP.
+
+      - name: Windows RDP.
         run: |
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -Value 0
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
           copy wallpaper.bat D:\a\wallpaper.bat
+
       - name: Tunnel.
-        run: Start-Process Powershell -ArgumentList '-Noexit -Command "/ngrok/ngrok.exe tcp --region ap 3389"'
+        run: Start-Process Powershell -ArgumentList '-Noexit -Command "./ngrok/ngrok.exe tcp --region ap 3389"'
+
       - name: Connect Rdp.
         run: cmd /c start.bat
-      - name: win10 RDP.
-        run: cmd /c loop.bat
+
+      - name: Keep alive.
+        run: powershell -ExecutionPolicy Bypass -File loop.ps1
